--- a/adlibrary/build.gradle
+++ b/adlibrary/build.gradle
@@ -25,4 +25,8 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:26.1.0'
+    // implementation 'com.malinskiy:materialicons:1.0.2'
+    implementation 'com.flyco.pageindicator:FlycoPageIndicator_Lib:1.0.0@aar'
+    implementation 'com.facebook.fresco:fresco:0.12.0'
+    implementation 'com.facebook.rebound:rebound:0.3.8'
 }
